# starlette-apispec

./: .flake8  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.rst  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pythonpackage.yml  pythonpublish.yaml
scripts/: format  publish  test
starlette_apispec/: __init__.py  schemas.py
tests/: test_starlette_apispec.py
