[tool.commitizen]
version = "1.0.5"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "starlette_apispec/__init__.py:__version__"
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.poetry]
name = "starlette-apispec"
version = "1.0.5"
description = "APISpec support for starlette"
authors = ["Santiago Fraire Willemoes <santiwilly@gmail.com>"]
keywords = ["openapi", "api", "swagger"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
readme = "README.rst"
license = "BSD-3-Clause"
homepage = "https://github.com/Woile/starlette-apispec"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
apispec = ">=1,<6"
starlette = ">=0.11"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
flake8 = "^3.6"
black = "^20.8b1"
mypy = "^0.910"
pytest-cov = "^2.6"
codecov = "^2.0"
isort = "^5.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
known_first_party = ["starlette_apispec", "tests"]
