[tool.commitizen]
tag_format = "v$version"
version_provider = "poetry"
version_files = [
  "starlette_apispec/__init__.py:__version__"
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.poetry]
name = "starlette-apispec"
version = "2.2.1"
description = "APISpec support for starlette"
authors = ["Santiago Fraire Willemoes <santiwilly@gmail.com>"]
keywords = ["openapi", "api", "swagger"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
readme = "README.rst"
license = "BSD-3-Clause"
homepage = "https://github.com/Woile/starlette-apispec"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
apispec = ">=1,<7"
starlette = ">=0.11"
pyyaml = ">=5.1,<7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6,<8"
flake8 = "^5.0"
black = "^23.7.0"
mypy = "^1.5"
pytest-cov = ">=3,<5"
codecov = "^2.0"
isort = "^5.9.2"
starlette = {version = ">=0.31,<0.38", extras = ["full"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
known_first_party = ["starlette_apispec", "tests"]
